<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleNewLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_letter"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/themeLetter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/themeLetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_theme"
            android:inputType="textEmailSubject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleNewLetter"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/toUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_addressee"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/themeLetter"
            app:layout_constraintTop_toBottomOf="@id/themeLetter" />

        <EditText
            android:id="@+id/textLetter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/enter_text"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:lines="7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/themeLetter"
            app:layout_constraintTop_toBottomOf="@id/toUser" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdownSignature"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_or_select_a_signature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLetter">

            <AutoCompleteTextView
                android:id="@+id/autoComplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/saveSignature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_signature"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/insertSignature"
            app:layout_constraintStart_toStartOf="@id/themeLetter"
            app:layout_constraintTop_toBottomOf="@id/dropdownSignature" />

        <Button
            android:id="@+id/insertSignature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_signature_in_text"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/saveSignature"
            app:layout_constraintTop_toBottomOf="@id/dropdownSignature" />

        <TextView
            android:id="@+id/titleAttachmentsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saveSignature"
            tools:text="@tools:sample/lorem" />

        <Button
            android:id="@+id/addAttachButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_file"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/deleteAttachButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleAttachmentsTextView" />

        <Button
            android:id="@+id/deleteAttachButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_file"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/addAttachButton"
            app:layout_constraintTop_toBottomOf="@id/titleAttachmentsTextView" />

        <Button
            android:id="@+id/sendNewLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/send"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancelNewLetter"
            app:layout_constraintTop_toBottomOf="@id/deleteAttachButton" />

        <Button
            android:id="@+id/cancelNewLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sendNewLetter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/sendNewLetter" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>